Modif css, fix ajout avatar, control formulaire principal

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
-@import '../node_modules/antd/dist/antd.css'
+@import "../node_modules/antd/dist/antd.css";
+
+input {
+  border-top: medium none !important;
+  border-left: medium none !important;
+  border-right: medium none !important;
+}
